<resources>
    <string name="app_name">Toeic Pratice</string>
    <string name="title_activity_menu_navigation">Menu_navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="part1">Part 1</string>
    <string name="part2">Part 2</string>
    <string name="part3">Part 3</string>
    <string name="part4">Part 4</string>
    <string name="part5">Part 5</string>
    <string name="part6">Part 6</string>
    <string name="part7">Part 7</string>
    <string name="part8">Settings</string>
</resources>
